Fixed blog post card spacing

--- a/src/assets/css/blog/blog.css
+++ b/src/assets/css/blog/blog.css
@@ -7,21 +7,36 @@
 
 .blog-post-card {
     width: 32%;
-    height: 500px;
+    height: 550px;
     display: flex;
     margin-bottom: 40px;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.blog-post-card-text > h2, h4 {
+.blog-post-card > h4 {
+    margin: auto 0 15px 0;
+}
+
+.blog-post-card > h2 {
+    font-size: 1.4rem;
     margin: 15px 0;
+}
+
+.blog-post-card > p {
+    font-size: 0.9rem;
 }
 
 .blog-post-card-img {
     width: 100%;
     height: 250px;
     object-fit: cover;
+}
+
+.blog-post-card-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .blog-post-card-button {
@@ -42,7 +57,6 @@
 
     .blog-post-card {
         width: 48%;
-        justify-content: space-evenly;
     }
 }
 
